# vektonn-client-python

./: .editorconfig  .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml  test.yml
scripts/: wait-for-it.sh
src/vektonn/: __init__.py  async_client.py  client.py  dtos.py  errors.py  service_endpoints.py  utils.py
tests/: __init__.py  conftest.py  test_client.py  test_client_async.py  test_dtos.py  test_dtos_perf.py  test_utils.py
tests/vektonn-docker/: docker-compose.yaml
tests/vektonn-docker/config/: index-shards-topology.yaml
